--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
+  <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <div class="container">
+      <a href="#" class="navbar-expand">My Logo</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="#" class="nav-link active">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link active">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link active">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link active"><span class="glyphicon glyphicon-envelope"></span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      
+    </div>
+  
+  </nav>
+  
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
