--- a/index.html
+++ b/index.html
@@ -4,35 +4,69 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Poppins:ital,wght@0,400;0,600;0,700;0,900;1,300;1,400;1,600;1,800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,400;0,600;0,700;0,900;1,300;1,400;1,600;1,800&display=swap" rel="stylesheet">
+  <title>Portfolio-Bootstrap version</title>
+  <link rel="stylesheet" href="style.css">
   <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark bg-secondary">
     <div class="container">
-      <a href="#" class="navbar-expand">My Logo</a>
-      <div class="collapse navbar-collapse">
+      <a href="#" class="navbar-brand">My Logo</a>
+      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+        <div class="navbar-toggler-icon"></div>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="nav">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a href="#" class="nav-link active">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link active">About</a>
+            <a href="#" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link active">Contact</a>
+            <a href="#" class="nav-link">Contact</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link active"><span class="glyphicon glyphicon-envelope"></span>
-            </a>
+            <a href="#" class="nav-link"><span class="glyphicon glyphicon-envelope"></span></a>
           </li>
         </ul>
       </div>
-      
     </div>
-  
   </nav>
+
+  <div class="container-fluid row bg-image bg-dark introduction-bg">
+    <div class="container-fluid col-1 pt-5 align-items-center my-auto">
+      <ul class="social-links list-unstyled align-content-center">
+        <li class="mb-2">
+          <img src="images/Vectorgithub.svg" alt="">
+        </li>
+        <li class="mb-2">
+          <img src="images/iconlinkedin.svg" alt="">
+        </li>
+        <li class="mb-2">
+          <img src="images/VectorV.svg" alt="">
+        </li>
+        <li class="mb-2">
+          <img src="images/Vectortwitter.svg" alt="">
+        </li>
+        <li class="mb-2">
+          <img src="images/VectorM.svg" alt="">
+        </li>
+      </ul>
+    </div>
+    <section class="introduction-section col-11 my-auto">
+      <h1 class="text-warning font-weight-bold mb-2">Hey There. <br>
+        I’m Alex</h1>
+        <h2 class="text-white mb-3">I’am a Software Developer</h2>
+        <p class="text-white col-5">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+          don’t hestiate to contact me.</p>
+    </section>
+  </div>
   
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
