--- a/index.html
+++ b/index.html
@@ -67,7 +67,49 @@
           don’t hestiate to contact me.</p>
     </section>
   </div>
-  
+  <section class="container">
+    <h2>My Recent Works</h2>
+    <div class="card row">
+      <img class="card-img-top col-md-7 " src="./images/yoga.svg" alt="">
+      <div class="card-body col-md-5">
+        <h2 class="card-title">Multi-Post Stories</h2>
+        <p class="card-text">
+         A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
+        </p>
+        <div class="languages">
+            <button>CSS</button>
+            <button>html</button>
+            <button>Bootstrap</button>
+            <button>Ruby</button>
+        </div>
+        <button>see project</button>
+       </div>
+    </div>
+    <div class="card2">
+    <img src="./images/card2.svg" alt="">
+    <div class="card-img-overlay">
+      <h3>Data DashboardHealthcare</h3>
+      <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+    </div>
+    <div>
+      <img src="./images/card22.svg" alt="">
+    </div>
+    <div>
+      <img src="./images/card23.svg" alt="">
+    </div><div>
+      <img src="./images/card24.svg" alt="">
+    </div>
+
+    <div>
+      <img src="./images/card22.svg" alt="">
+    </div>
+    <div>
+      <img src="./images/card23.svg" alt="">
+    </div>
+    </div>
+    
+    
+  </section>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
