Add about & contact sections

--- a/index.html
+++ b/index.html
@@ -67,49 +67,148 @@
           don’t hestiate to contact me.</p>
     </section>
   </div>
-  <section class="container">
+  <section class="container" >
     <h2>My Recent Works</h2>
-    <div class="card row">
-      <img class="card-img-top col-md-7 " src="./images/yoga.svg" alt="">
-      <div class="card-body col-md-5">
-        <h2 class="card-title">Multi-Post Stories</h2>
-        <p class="card-text">
-         A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
-        </p>
-        <div class="languages">
-            <button>CSS</button>
-            <button>html</button>
-            <button>Bootstrap</button>
-            <button>Ruby</button>
+        <div class="card">
+          <img class="card-img-top" src="./images/yoga.svg" alt="">
+          <div class="card-body">
+            <h2 class="card-title">Multi-Post Stories</h2>
+            <p class="card-text">
+             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
+            </p>
+            <div class="languages">
+                <button>CSS</button>
+                <button>html</button>
+                <button>Bootstrap</button>
+                <button>Ruby</button>
+            </div>
+            <button>see project</button>
+          </div>
         </div>
-        <button>see project</button>
-       </div>
-    </div>
-    <div class="card2">
-    <img src="./images/card2.svg" alt="">
-    <div class="card-img-overlay">
-      <h3>Data DashboardHealthcare</h3>
-      <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-    </div>
-    <div>
-      <img src="./images/card22.svg" alt="">
-    </div>
-    <div>
-      <img src="./images/card23.svg" alt="">
-    </div><div>
-      <img src="./images/card24.svg" alt="">
-    </div>
+    <div class="row g-3">
+        <div class="card small-card col-md-4 p-4">
+          <img src="./images/card2.svg" alt="">
+          <div class="card-img-overlay">
+            <h3>Data DashboardHealthcare</h3>
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+          </div>
+        </div>
+        <div class="card small-card col-md-4">
+          <img src="images/card2.svg" class="card-img" alt="card-image">
+          <div class="card-img-overlay">
+            <h3 class="card-title">Data DashboardHealthcare</h3>
+            <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+            <p class="card-text">Last updated 3 mins ago</p>
+          </div>
+        </div>
+        <div class="card small-card col-md-4">
+          <img src="./images/card2.svg" alt="">
+          <div class="card-img-overlay">
+            <h3>Data DashboardHealthcare</h3>
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+          </div>
+        </div>
+        <div class="card small-card col-md-4">
+          <img src="images/card2.svg" class="card-img" alt="card-image">
+          <div class="card-img-overlay">
+            <h3 class="card-title">Data DashboardHealthcare</h3>
+            <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+            <p class="card-text">Last updated 3 mins ago</p>
+          </div>
+        </div>
+        <div class="card small-card col-md-4">
+          <img src="images/card2.svg" class="card-img" alt="card-image">
+          <div class="card-img-overlay">
+            <h3 class="card-title">Data DashboardHealthcare</h3>
+            <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+            <p class="card-text">Last updated 3 mins ago</p>
+          </div>
+        </div>
+        <div class="card small-card col-md-4">
+          <img src="images/card2.svg" class="card-img" alt="card-image">
+          <div class="card-img-overlay">
+            <h3 class="card-title">Data DashboardHealthcare</h3>
+            <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+            <p class="card-text">Last updated 3 mins ago</p>
+          </div>
+        </div>
+      </div>
 
-    <div>
-      <img src="./images/card22.svg" alt="">
-    </div>
-    <div>
-      <img src="./images/card23.svg" alt="">
-    </div>
-    </div>
-    
-    
   </section>
+  <section class="about-section container my-auto">
+    <div class="description-secion">
+      <h2>About me</h2>
+      <p>
+        Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+      </p>
+      <button class="btn btn-warning">Get My Resume</button>
+    </div>
+    <div class="technologies">
+      <div class="languages">
+        <h2>Languages</h2>
+        <ul>
+          <li>javaScript</li>
+          <li>Ruby</li>
+          <li>HTML</li>
+          <li>css</li>
+        </ul>
+      </div>
+      <div class="Frameworks">
+        <h2>Frameworks</h2>
+        <ul>
+          <li>Bootstrap</li>
+          <li>Ruby on Rails</li>
+          <li>RSpec</li>
+          <li>CapyBara</li>
+          <li>Selenium</li>
+        </ul>
+      </div>
+      <div class="skills">
+        <h2>Skills</h2>
+        <ul>
+          <li>CodeKit</li>
+          <li>GitHub</li>
+          <li>CodePen</li>
+          <li>GitLab</li>
+          <li>Terminal</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section class="contact-section container">
+    <div class="contact-description">
+      <h2>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</h2>
+    </div>
+    <form action="#">
+      <label for="name"></label>
+      <input type="text" id="name" placeholder="First name">
+      <label for="last-name"></label>
+      <input type="text" id="last-name" placeholder="Last name">
+      <label for="email"></label>
+      <input type="email" name="email" id="email" placeholder="Your email">
+      <textarea name="message" id="message" cols="30" rows="10" placeholder="Type your message here"></textarea>
+      <button class="btn btn-warning">Get In Touch</button>
+    </form>
+  </section>
+  <footer>
+    <ul class="social-links list-unstyled align-content-center">
+      <li class="mr-2">
+        <img src="images/Vectorgithub.svg" alt="">
+      </li>
+      <li class="mr-2">
+        <img src="images/iconlinkedin.svg" alt="">
+      </li>
+      <li class="mr-2">
+        <img src="images/VectorV.svg" alt="">
+      </li>
+      <li class="mr-2">
+        <img src="images/Vectortwitter.svg" alt="">
+      </li>
+      <li class="mr-2">
+        <img src="images/VectorM.svg" alt="">
+      </li>
+    </ul>
+  </footer>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
