correct linter errors

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <nav class="navbar navbar-expand-md navbar-dark bg-secondary">
     <div class="container">
       <a href="#" class="navbar-brand">My Logo</a>
-      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
-        <div class="navbar-toggler-icon"></div>
+      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="nav">
         <ul class="navbar-nav">
@@ -77,12 +77,12 @@
              A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
             </p>
             <div class="languages">
-                <button>CSS</button>
-                <button>html</button>
-                <button>Bootstrap</button>
-                <button>Ruby</button>
+                <button type="button">CSS</button>
+                <button type="button">html</button>
+                <button type="button">Bootstrap</button>
+                <button type="button">Ruby</button>
             </div>
-            <button>see project</button>
+            <button type="button">see project</button>
           </div>
         </div>
     <div class="row g-3">
@@ -141,7 +141,7 @@
       <p>
         Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
       </p>
-      <button class="btn btn-warning">Get My Resume</button>
+      <button type="button" class="btn btn-warning">Get My Resume</button>
     </div>
     <div class="technologies">
       <div class="languages">
@@ -187,7 +187,7 @@
       <label for="email"></label>
       <input type="email" name="email" id="email" placeholder="Your email">
       <textarea name="message" id="message" cols="30" rows="10" placeholder="Type your message here"></textarea>
-      <button class="btn btn-warning">Get In Touch</button>
+      <button type="button" class="btn btn-warning">Get In Touch</button>
     </form>
   </section>
   <footer>
